update a tag href home page

--- a/obo-stadium/template/index.pug
+++ b/obo-stadium/template/index.pug
@@ -22,9 +22,9 @@ block mainContent
     .row
       .title.col-12
         h2.h2 S&#x1EA3;n ph&#x1EA9;m b&aacute;n ch&#x1EA1;y
-        a.see-more-btn-text.text-uppercase(href='#') Xem Th&ecirc;m
+        a.see-more-btn-text.text-uppercase(href='./shop.html') Xem Th&ecirc;m
     .row.product-row.d-flex.justify-content-md-between
-      .product.position-relative
+      a.product.position-relative(href="./product-details.html")
         .card
           img.card-img-top(src='./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png' alt='adidas-Yeezy-Boost-350-V2-Lundmark')
           .card-body
@@ -71,14 +71,14 @@ block mainContent
         .shadow.mx-auto.position-absolute
   // Break Banner
   section.break-banner
-    a(href='#')
+    a(href='./product-details.html')
       img#promo-banner-1.img-fluid(src='./image/banner/promo-banner-1-lg.png' alt='promo-banner-1')
   // Staff Selects
   section.products-showcase.staffs-choose.container
     .row
       .title.col-12
         h2.h2 OBO LỰA CHỌN
-        a.see-more-btn-text.text-uppercase(href='#') Xem Th&ecirc;m
+        a.see-more-btn-text.text-uppercase(href='./shop.html') Xem Th&ecirc;m
     .row.product-row.d-flex.justify-content-md-between
       .product.position-relative
         .card
@@ -127,14 +127,14 @@ block mainContent
         .shadow.mx-auto.position-absolute
   // Break Banner
   section.break-banner
-    a(href='#')
+    a(href='./product-details.html')
       img#promo-banner-2.img-fluid(src='./image/banner/promo-banner-2-lg.png' alt='promo-banner-2')
   // Under retails
   section.products-showcase.under-retail.container
     .row
       .title.col-12
         h2.h2 THẤP HƠN “GIÁ HÃNG”
-        a.see-more-btn-text.text-uppercase(href='#') Xem Th&ecirc;m
+        a.see-more-btn-text.text-uppercase(href='./shop.html') Xem Th&ecirc;m
     .row.product-row.d-flex.justify-content-md-between
       .product.position-relative
         .card
@@ -183,7 +183,7 @@ block mainContent
         .shadow.mx-auto.position-absolute
   // Break Banner
   section.break-banner
-    a(href='#')
+    a(href='./product-details.html')
       img#promo-banner-3.img-fluid(src='./image/banner/promo-banner-3-lg.png' alt='promo-banner-3')
   // Category Section
   section.categories-showcase.container
@@ -192,27 +192,27 @@ block mainContent
         h2.h2 B&#x1ED9; S&#x1B0;u T&#x1EAD;p
     .row.categories-row.d-flex.justify-content-md-between
       .category.col-sm-4
-        a.category-wrap(href='#')
+        a.category-wrap(href='./shop.html')
           img.img-fluid(src='./image/categories/category-1.png' alt='category-1')
           .tag TECH PERFORMANCE
       .category.col-sm-4
-        a.category-wrap(href=' #')
+        a.category-wrap(href='./shop.html')
           img.img-fluid(src=' ./image/categories/category-2.png' alt='category-2')
           .tag OFF-WHITE
       .category.col-sm-4
-        a.category-wrap(href=' #')
+        a.category-wrap(href='./shop.html')
           img.img-fluid(src=' ./image/categories/category-3.png' alt='category-3')
           .tag SUPREME
       .category.col-sm-4
-        a.category-wrap(href=' #')
+        a.category-wrap(href='./shop.html')
           img.img-fluid(src=' ./image/categories/category-4.png' alt='category-4')
           .tag NBA
       .category.col-sm-4
-        a.category-wrap(href=' #')
+        a.category-wrap(href='./shop.html')
           img.img-fluid(src=' ./image/categories/category-5.png' alt='category-5')
           .tag YEEZY
       #last-category.category.col-sm-4
-        a.category-wrap(href=' #')
+        a.category-wrap(href='./shop.html')
           img.img-fluid(src=' ./image/categories/category-6.png' alt='category-6')
           .tag Comme Des Gar&ccedil;ons
   // Newsletter Section
@@ -229,13 +229,13 @@ block mainContent
     .row
       .title.col-12
         h2.h2 B&agrave;i vi&#x1EBF;t m&#x1EDB;i
-        a.see-more-btn-text.text-uppercase(href='#') Xem Th&ecirc;m
+        a.see-more-btn-text.text-uppercase(href='./news.html') Xem Th&ecirc;m
     .carousel
-      .news.position-relative
+      a(href="./post.html").news.position-relative
         .card
           img.card-img-top(src='./image/news/news-1-thumnails.jpg' alt='news-1')
           .card-body
-            h5.card-title Pack “Logo Sketch” với branding mộc mạc trên Air Max 97 và Air Max Plus
+            h5.card-title Pack “Logo Sketch” với branding mộc mạc trên Air Max 97 và&nbsp;Air&nbsp;Max Plus
             p.card-text.news-short-desc Cùng đến với mẫu branding kiểu phác thảo, đầy mộc mạc và “blend" hoàn hảo cùng tổng thể phối màu.
             p.card-text.author
               | By 
@@ -301,7 +301,7 @@ block mainContent
         .card
           img.card-img-top(src='./image/news/news-7-thumnails.jpg' alt='news-7')
           .card-body
-            h5.card-title Red Wing kết hợp cùng New Balance chế tác mẫu 997 đầy tinh xảo
+            h5.card-title Red Wing kết hợp cùng New Balance chế tác mẫu 997 đầy&nbsp;tinh&nbsp;xảo
             p.card-text.news-short-desc Trong lần collab này, Red Wing và New Balance sẽ mang đến dòng sneaker 997.
             p.card-text.author
               | By 
