--- a/obo-stadium/css/components/product-details/size-choose.css
+++ b/obo-stadium/css/components/product-details/size-choose.css
@@ -41,7 +41,7 @@ body.modal2-on {
 
 @media (min-width: 576px) {
   .modal-dialog-scrollable {
-    max-height: calc(100% - 25rem);
+    max-height: 50vh;
   }
 }
 
