--- a/bootstrap_project/portfolio/css/style.css
+++ b/bootstrap_project/portfolio/css/style.css
@@ -133,8 +133,8 @@ html {
     background-image: linear-gradient(180deg, #479cc0, #479cc0);
 }
 
-.project-img {
-    filter: drop-shadow(14px 13px 15px black);
+.project-img, .image-wrapper {
+    filter: drop-shadow(14px 13px 15px rgba(0, 0, 0, 0.3));
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -232,6 +232,11 @@ html {
     background-image: linear-gradient(180deg, #696380, #696380);
 }
 
+.image-wrapper {
+    max-height: 500px;
+    overflow: hidden;
+}
+
 .project-item.project-four {
     background-image: linear-gradient(90deg, rgba(221, 221, 221, 1) 0%, rgba(221, 221, 221, 1) 12%, rgba(255, 255, 255, 1) 25%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 1) 75%, rgba(221, 221, 221, 1) 88%, rgba(221, 221, 221, 1) 100%);
 }
@@ -244,6 +249,24 @@ html {
     color: #444;
 }
 
+.project-five {
+    background-color: #EEF2F9;
+    color: #444;
+}
+
+.project-six {
+    background-color: #7a2a2c;
+}
+
+.project-six:hover .project-img-six {
+    transition: all 15s ease;
+    transform: translateY(-70%)
+}
+
+.project-sub-title {
+    font-size: 1rem;
+}
+
 .line {
     height: 10px;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(74, 74, 74, .08)), to(rgba(74, 74, 74, .08)));
@@ -253,4 +276,16 @@ html {
 .chart {
     max-width: 500px;
     max-height: 500px;
+}
+
+@media (max-width: 768px) {
+    .image-wrapper {
+        height: 300px;
+    }
+}
+
+@media (max-width: 375px) {
+    .image-wrapper {
+        height: 200px;
+    }
 }
