fix html font-size, hover status sort bar

--- a/obo-stadium/sass/components/shop/product-showing.scss
+++ b/obo-stadium/sass/components/shop/product-showing.scss
@@ -36,8 +36,7 @@
         padding-right: 150px;
 
         &:hover {
-            background-color: $hover-main-color;
-            color: white;
+            color: $main-color;
         }
 
         &.active {
