update arrow collapse faqs

--- a/obo-stadium/template/product-details.pug
+++ b/obo-stadium/template/product-details.pug
@@ -136,55 +136,55 @@ block mainContent
   section.products-showcase.container
     .row
       .title.col-12
-        h2.h2 S&#x1EA3;n ph&#x1EA9;m li&ecirc;n quan
+        h2.h2 SẢN PHẨM LIÊN QUAN
     .row.product-row.d-flex.justify-content-md-between
-      .product.position-relative
-        .card
-          img.card-img-top(src='./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png' alt='adidas-Yeezy-Boost-350-V2-Lundmark')
-          .card-body
-            h5.card-title
-              | Adidas Yeezy Boost 350
-              | V2 Lundmark (Non
-            p.card-text.price-desc Gi&aacute; th&#x1EA5;p nh&#x1EA5;t hi&#x1EC7;n t&#x1EA1;i
-            p.price 7.200.000 &#x20AB;
-            p.card-text.sold &Dstrok;&atilde; b&aacute;n 1963 &dstrok;&ocirc;i
-        .shadow.mx-auto.position-absolute
-      .product.position-relative
-        .card
-          img.card-img-top(src='./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png' alt='adidas-Yeezy-Boost-350-V2-Lundmark')
-          .card-body
-            h5.card-title Jordan 4 Retro Cool Grey (2019)
-            p.card-text.price-desc Gi&aacute; th&#x1EA5;p nh&#x1EA5;t hi&#x1EC7;n t&#x1EA1;i
-            p.price 4.810.000 &#x20AB;
-            p.card-text.sold &Dstrok;&atilde; b&aacute;n 1312 &dstrok;&ocirc;i
-        .shadow.mx-auto.position-absolute
-      .product.position-relative
-        .card
-          img.card-img-top(src='./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png' alt='adidas-Yeezy-Boost-350-V2-Lundmark')
-          .card-body
-            h5.card-title Jordan 1 Retro Low OG SP Travis Scott
-            p.card-text.price-desc Gi&aacute; th&#x1EA5;p nh&#x1EA5;t hi&#x1EC7;n t&#x1EA1;i
-            p.price 20.790.000 &#x20AB;
-            p.card-text.sold &Dstrok;&atilde; b&aacute;n 2246 &dstrok;&ocirc;i
-        .shadow.mx-auto.position-absolute
-      .product.position-relative
-        .card
-          img.card-img-top(src='./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png' alt='adidas-Yeezy-Boost-350-V2-Lundmark')
-          .card-body
-            h5.card-title Air Jordan 1 Mid Yellow Toe Black
-            p.card-text.price-desc Gi&aacute; th&#x1EA5;p nh&#x1EA5;t hi&#x1EC7;n t&#x1EA1;i
-            p.price 3.740.000 &#x20AB;
-            p.card-text.sold &Dstrok;&atilde; b&aacute;n 564 &dstrok;&ocirc;i
-        .shadow.mx-auto.position-absolute
-      .product.position-relative
-        .card
-          img.card-img-top(src='./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png' alt='adidas-Yeezy-Boost-350-V2-Lundmark')
-          .card-body
-            h5.card-title Nike SB Dunk Low Parra
-            p.card-text.price-desc Gi&aacute; th&#x1EA5;p nh&#x1EA5;t hi&#x1EC7;n t&#x1EA1;i
-            p.price 6.620.000 &#x20AB;
-            p.card-text.sold &Dstrok;&atilde; b&aacute;n 1456 &dstrok;&ocirc;i
-        .shadow.mx-auto.position-absolute
+      //- .product.position-relative
+      //-   .card
+      //-     img.card-img-top(src='./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png' alt='adidas-Yeezy-Boost-350-V2-Lundmark')
+      //-     .card-body
+      //-       h5.card-title
+      //-         | Adidas Yeezy Boost 350
+      //-         | V2 Lundmark (Non
+      //-       p.card-text.price-desc Gi&aacute; th&#x1EA5;p nh&#x1EA5;t hi&#x1EC7;n t&#x1EA1;i
+      //-       p.price 7.200.000 &#x20AB;
+      //-       p.card-text.sold &Dstrok;&atilde; b&aacute;n 1963 &dstrok;&ocirc;i
+      //-   .shadow.mx-auto.position-absolute
+      //- .product.position-relative
+      //-   .card
+      //-     img.card-img-top(src='./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png' alt='adidas-Yeezy-Boost-350-V2-Lundmark')
+      //-     .card-body
+      //-       h5.card-title Jordan 4 Retro Cool Grey (2019)
+      //-       p.card-text.price-desc Gi&aacute; th&#x1EA5;p nh&#x1EA5;t hi&#x1EC7;n t&#x1EA1;i
+      //-       p.price 4.810.000 &#x20AB;
+      //-       p.card-text.sold &Dstrok;&atilde; b&aacute;n 1312 &dstrok;&ocirc;i
+      //-   .shadow.mx-auto.position-absolute
+      //- .product.position-relative
+      //-   .card
+      //-     img.card-img-top(src='./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png' alt='adidas-Yeezy-Boost-350-V2-Lundmark')
+      //-     .card-body
+      //-       h5.card-title Jordan 1 Retro Low OG SP Travis Scott
+      //-       p.card-text.price-desc Gi&aacute; th&#x1EA5;p nh&#x1EA5;t hi&#x1EC7;n t&#x1EA1;i
+      //-       p.price 20.790.000 &#x20AB;
+      //-       p.card-text.sold &Dstrok;&atilde; b&aacute;n 2246 &dstrok;&ocirc;i
+      //-   .shadow.mx-auto.position-absolute
+      //- .product.position-relative
+      //-   .card
+      //-     img.card-img-top(src='./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png' alt='adidas-Yeezy-Boost-350-V2-Lundmark')
+      //-     .card-body
+      //-       h5.card-title Air Jordan 1 Mid Yellow Toe Black
+      //-       p.card-text.price-desc Gi&aacute; th&#x1EA5;p nh&#x1EA5;t hi&#x1EC7;n t&#x1EA1;i
+      //-       p.price 3.740.000 &#x20AB;
+      //-       p.card-text.sold &Dstrok;&atilde; b&aacute;n 564 &dstrok;&ocirc;i
+      //-   .shadow.mx-auto.position-absolute
+      //- .product.position-relative
+      //-   .card
+      //-     img.card-img-top(src='./image/product/adidas-Yeezy-Boost-350-V2-Lundmark-Product.png' alt='adidas-Yeezy-Boost-350-V2-Lundmark')
+      //-     .card-body
+      //-       h5.card-title Nike SB Dunk Low Parra
+      //-       p.card-text.price-desc Gi&aacute; th&#x1EA5;p nh&#x1EA5;t hi&#x1EC7;n t&#x1EA1;i
+      //-       p.price 6.620.000 &#x20AB;
+      //-       p.card-text.sold &Dstrok;&atilde; b&aacute;n 1456 &dstrok;&ocirc;i
+      //-   .shadow.mx-auto.position-absolute
 
   // Modals
   include ./template-parts/size-choose-modal
@@ -196,6 +196,9 @@ block footer
 block customizeScript
   // Image Zoom Js
   script(src="./vendor/zoom-master/jquery.zoom.min.js" type="text/javascript")
+
+    // Currency
+  script(type="text/javascript" src="./vendor/currency/currency.min.js")
 
   // Slick Js
   script(type="text/javascript" src="./vendor/slick/slick.min.js")
