--- a/obo-stadium/template/faqs.pug
+++ b/obo-stadium/template/faqs.pug
@@ -114,4 +114,5 @@ block footer
   include ./template-parts/footer
 
 block customizeScript
+  script(src="./script/faqs.js")
   script(src="./script/except-home-page.js")
