update sell confirm page and process fee

--- a/obo-stadium/sass/main.scss
+++ b/obo-stadium/sass/main.scss
@@ -205,6 +205,10 @@ button {
 footer {
     background-color: $text-dark;
     margin-top: $fifty-pixel;
+
+    & .social-icons {
+        color: $text-white;
+    }
 }
 
 footer .row {
