--- a/techmaster-project/jobs-module/resources/css/main.css
+++ b/techmaster-project/jobs-module/resources/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
 
 html {
   font-size: 16px;
@@ -7,6 +7,8 @@ html {
 * {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  line-height: 19px;
+  color: #505863;
 }
 
 
