update management job page

--- a/techmaster-project/jobs-module/resources/css/main.css
+++ b/techmaster-project/jobs-module/resources/css/main.css
@@ -49,13 +49,20 @@ li {
 }
 
 .blue-btn {
-  color: white;
   background-color: #3C78E8;
   display: block;
 }
 
 .orange-btn {
   background: #FF6B1E;
+}
+
+.green-btn {
+  background: #00A65A;
+}
+
+.light-blue-btn {
+  background-color: #00C0EF;
 }
 
 /* Override Bootstrap */
