--- a/obo-stadium/sass/post.scss
+++ b/obo-stadium/sass/post.scss
@@ -45,6 +45,10 @@
         color: white;
     }
 
+    & .icon {
+        margin-right: $five-pixel;
+    }
+
     & .facebook {
         background-color: #3B5998;
     }
