update routing for angular tours of heroes

--- a/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
+++ b/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
@@ -7,4 +7,6 @@
       <input [value]="hero.name" (input)="hero.name = $event.target.value" />
     </label>
   </div>
+
+  <button (click)="goBack()">go back</button>
 </div>
