--- a/angular-shopping-cart/src/app/cart-products/cart-products.component.html
+++ b/angular-shopping-cart/src/app/cart-products/cart-products.component.html
@@ -13,7 +13,7 @@
         <div class="description">
           {{ product.description }}
         </div>
-        <div class="price">{{ product.price }}</div>
+        <div class="price">{{ product.price | currency }}</div>
       </div>
     </div>
 
