--- a/angular-shopping-cart/src/app/cart-promo-code/cart-promo-code.component.html
+++ b/angular-shopping-cart/src/app/cart-promo-code/cart-promo-code.component.html
@@ -1,4 +1,9 @@
 <div class="promotion">
   <label for="promo-code">Have A Promo Code?</label>
-  <input type="text" id="promo-code" /> <button type="button"></button>
+  <input
+    type="text"
+    [(ngModel)]="promoCode"
+    (keyup.enter)="applyPromoCodeHandler()"
+  />
+  <button type="button" (click)="applyPromoCodeHandler()"></button>
 </div>
