--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ html {
   left: 0;
 }
 
+.h4 {
+  font-size: 20px;
+}
+
 #first-part {
   background-color: #fafafa;
 }
@@ -156,7 +160,7 @@ html {
   font-size: 3rem;
   opacity: 0;
   text-align: center;
-  transition: all 0.3s ease;
+  transition: all 0.3s linear;
 }
 
 .project-link:hover {
