--- a/react-quiz/src/App.css
+++ b/react-quiz/src/App.css
@@ -5,6 +5,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .Box {
@@ -21,13 +24,8 @@
 }
 
 .BoxTransparent {
-  position: absolute;
-  width: 1200px;
+  max-width: 1200px;
   height: 500px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: calc(100% - 30px);
   display: flex;
   flex-flow: column;
   justify-content: center;
@@ -40,6 +38,7 @@
 .Heading {
   font-size: 100px;
   font-weight: bold;
+  word-break: break-word;
 }
 
 .Description {
@@ -71,4 +70,42 @@
 .btn-secondary:not(:disabled):not(.disabled):active,
 .show > .btn-secondary.dropdown-toggle {
   background-color: #054862;
+}
+
+@media (max-width: 560px) {
+  .Heading {
+    font-size: 70px;
+    font-weight: bold;
+  }
+
+  .Description {
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 50px;
+  }
+
+  .Button {
+    text-align: center;
+    background-color: #033042;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    width: auto;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+}
+
+@media (max-width: 450px) {
+  .Heading {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 320px) {
+  .App {
+    height: 123vh;
+  }
 }
