--- a/react-quiz/src/Components/Main/Header/Header.css
+++ b/react-quiz/src/Components/Main/Header/Header.css
@@ -39,3 +39,33 @@
   line-height: 50px;
   color: #fff;
 }
+
+@media (max-width: 560px) {
+  .ProgressBar:before {
+    width: 250px;
+  }
+
+  .Percent {
+    left: 300px;
+  }
+}
+
+@media (max-width: 450px) {
+  .ProgressBar:before {
+    width: 130px;
+  }
+
+  .Percent {
+    left: 180px;
+    top: 28px;
+  }
+
+  .RightSide {
+    width: 40px;
+    height: 40px;
+  }
+
+  .Time {
+    line-height: 40px;
+  }
+}
