--- a/css/style.css
+++ b/css/style.css
@@ -307,6 +307,10 @@ html {
   .image-wrapper {
     height: 300px;
   }
+
+  .project-item {
+    padding: 35px;
+  }
 }
 
 @media (max-width: 375px) {
