update css toggler, click nav-link close menu

--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -349,6 +349,11 @@ li {
   top: 20px;
   z-index: 100;
   background-color: white;
+  opacity: 0.5;
+}
+
+.navbar-light .navbar-toggler:hover {
+  opacity: 1;
 }
 
 .navbar-collapse {
