Cv: add rn pokedex project

--- a/cv/css/style.css
+++ b/cv/css/style.css
@@ -326,6 +326,10 @@ li {
   background-color: #bfa5a5;
 }
 
+.project-ten {
+  background-color: #fbb149;
+}
+
 .project-sub-title {
   font-size: 1rem;
 }
